test/simple/ill-typed/nested_tuple_right.caprice
(* TEST
  include refute;
*)


let x : int * (bool * int) = 0, (true, true)
